--- a/src/index.css
+++ b/src/index.css
@@ -166,3 +166,7 @@ input[type="checkbox"]:checked + label span:first-of-type {
 }
 
 /* //////////////////////////// */
+
+html {
+  font-size: 105%;
+}
