--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
+html {
+  font-size: 105%;
+}
+
 /*//////////////////////*/
 /*    Intro Slider      */
 /*//////////////////////*/
@@ -11,9 +19,11 @@
 }
 
 /***** Slide Right *****/
+
 .slide-right {
   animation: 6s slide-right infinite;
 }
+
 @keyframes slide-right {
   0%,
   20% {
@@ -33,9 +43,11 @@
 }
 
 /***** Slide Left *****/
+
 .slide-left {
   animation: 3s slide-left;
 }
+
 @keyframes slide-left {
   from {
     margin-left: 100%;
@@ -50,6 +62,7 @@
 .fade-in {
   animation: fadeIn ease 3s;
 }
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -113,7 +126,7 @@
 /*////////////////////////*/
 
 /* width */
-::-webkit-scrollbar {
+.cart::-webkit-scrollbar {
   width: 5px;
 }
 
@@ -123,7 +136,7 @@
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+.cart::-webkit-scrollbar-thumb {
   background: #c8c8c8;
   border-radius: 5px;
 }
@@ -134,12 +147,6 @@
 }
 
 /* //////////////////////////// */
-
-.slick-track {
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-}
 
 /*/////////////////////////////*/
 /*       Rounded-CheckBox      */
@@ -167,6 +174,30 @@ input[type="checkbox"]:checked + label span:first-of-type {
 
 /* //////////////////////////// */
 
-html {
-  font-size: 105%;
+/*/////////////////////////////*/
+/*       React Slick Config    */
+/*/////////////////////////////*/
+
+.intro-carousel .slick-track {
+  display: block;
+}
+
+.category-carousel .slick-track {
+  display: block;
+}
+
+.blog-review .slick-track {
+  display: block;
+}
+
+.slick-track::after,
+.slick-track::before {
+  display: none;
+}
+
+.deal-of-the-day .slick-track,
+.slick-track {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
 }
